--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -5,14 +5,25 @@
 
 .info-box {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(70px, 1fr));
-  gap: 10px;
+  grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
+  gap: 40px;
+  max-width: 300px;
+}
+
+.info-container {
+  display: flex;
+  justify-content: center;
+}
+
+hr {
+  max-width: 300px;
 }
 
 span {
   font-size: 17px;
   color: rgba(128, 128, 128, 0.801);
   margin-bottom: -20px;
+  min-width: 80px;
 }
 
 .current-temp {
@@ -25,8 +36,8 @@ span {
 
 .box {
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  align-items: center;
 }
 
 .temp-box {
@@ -34,4 +45,35 @@ span {
   align-items: center;
   justify-content: center;
   margin-bottom: -30px;
+}
+
+.location {
+  font-size: 30px;
+}
+
+/* Daily forcast */
+
+.forecast-day {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.forecast-day h4 {
+  margin-right: 30px;
+}
+
+.forecast-icon {
+  width: 50px;
+}
+
+@media (max-width: 500px) {
+  .forecast-day h4 {
+    margin: 0;
+  }
+
+  .forecast-day {
+    display: flex;
+    flex-direction: column;
+  }
 }
