--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #1f4b4d;
+
+  background: #1f4c4d;
+  background: linear-gradient(0deg, #0a191a, #2d7275);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
